@@ -1,6 +1,7 @@
 SNAPSHOT
 * Add the support of SubmissionAgencyIdentifier and OriginatingAgencyIdentifier fields (extension of ManagementMetadata for Vitam)
 * Add the parameter ignoreUnknownFile in the SiegfriedModule so that the unknown file are not included in the SIP (in Vitam, an unknown file in a SIP causes a "business refusal" to all the SIP) . For retro-compatibilité, this feature is not activated by default
+* Add the parameter ArchiveTransferConfig in the binaryDataObjectConstructor module so tha file with a special character in the extension will be rejected. For retrocompatibility, this feature is not activated by default
 * Update the documentation
 
 20161018
